--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ngx-pubsub",
+  "name": "@berthertogen/ngx-pubsub",
   "version": "0.6.0",
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
     "docs": "npm run docs:build",
-    "docs:build": "compodoc -p tsconfig.json -n ngx-pubsub -d docs --hideGenerator",
+    "docs:build": "compodoc -p tsconfig.json -n @berthertogen/ngx-pubsub -d docs --hideGenerator",
     "docs:serve": "npm run docs:build -- -s",
     "docs:watch": "npm run docs:build -- -s -w",
     "lint": "tslint --project tsconfig.json src/**/*.ts",
