--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,7 +1,7 @@
 {
   "generator-angular2-library": {
     "promptValues": {
-      "gitRepositoryUrl": "https://github.com/fikani/ngx-pubsub.git"
+      "gitRepositoryUrl": "https://github.com/berthertogen/ngx-pubsub.git"
     }
   }
 }
